# NVBit

nvbit_release/core/utils/: utils.h
nvbit_release/tools/record_reg_vals/: CMakeLists.txt  Makefile  common.h  inject_funcs.cu  record_reg_vals.cu  small_test.sh
